# task-bridge

./: .dockerignore  .geminiignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  cliff.toml  mkdocs.yml  pyproject.toml
.github/: ABOUT.md  README.md
.github/workflows/: android-ci.yml  backend-ci.yml  docs-site.yml  prepare-release.yml  protocol-ci.yml  publish-release.yml  release-contract.yml  release-smoke.yml  temporal-adapter-ci.yml
android/: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES_taskbridge-core.txt  THIRD_PARTY_LICENSES_taskbridge-transport-okhttp.txt  build.gradle.kts  gradle.properties  settings.gradle.kts
android/build-logic/: build.gradle.kts
android/build-logic/src/main/kotlin/io/github/nikkiw/taskbridge/buildlogic/: TaskbridgeAndroidApplicationConventionPlugin.kt  TaskbridgeAndroidLibraryConventionPlugin.kt  TaskbridgeLicenseConventionPlugin.kt  TaskbridgePublishingConventionPlugin.kt  TaskbridgeQualityConventionPlugin.kt
android/config/detekt/: detekt.yml
android/config/license/: allowed-licenses.json
android/config/spotless/: copyright.kt
android/gradle/: libs.versions.toml
android/sample/: build.gradle.kts
android/sample/src/main/: AndroidManifest.xml
android/sample/src/main/java/ndev/android/taskbridge/sample/: MainActivity.kt
android/sample/src/main/res/values/: strings.xml  themes.xml
android/taskbridge-core/: build.gradle.kts
android/taskbridge-core/src/main/kotlin/io/github/nikkiw/taskbridge/api/: SuspensionAcknowledgementState.kt  TaskBridgeClient.kt  TaskBridgeRouteResolver.kt
android/taskbridge-core/src/main/kotlin/io/github/nikkiw/taskbridge/checkpoint/: DataStoreTaskBridgeCheckpointStore.kt  TaskBridgeCheckpointStore.kt
android/taskbridge-core/src/test/java/io/github/nikkiw/taskbridge/: TaskBridgeClientResilienceTest.kt  TaskBridgeEventResilienceFuzzTest.kt  TaskBridgeRecentEventIdsTest.kt  TaskBridgeRetryGateTest.kt  TaskBridgeStreamTransportTest.kt  TaskBridgeTestFixtures.kt
android/taskbridge-transport-okhttp/: build.gradle.kts
android/taskbridge-transport-okhttp/src/test/java/io/github/nikkiw/taskbridge/: OkHttpTaskBridgeTestFixtures.kt
backend/adapters/: README.md
backend/adapters/temporal/: CHANGELOG.md  README.md  pyproject.toml
backend/adapters/temporal/taskbridge_temporal/: __init__.py  events.py  executor.py  types.py
backend/adapters/temporal/tests/: test_executor_mapping.py
backend/taskbridge-fastapi/: .editorconfig  CHANGELOG.md  README.md  pyproject.toml
backend/taskbridge-fastapi/taskbridge/: __init__.py  action_receipt_store.py  dependencies.py  errors.py  event_store.py  fakes.py  handlers.py  models.py  observability.py  readiness.py  routes_http.py  routes_ws.py  security.py  services.py  stream_runtime.py  stream_settings.py  suspension_store.py  task_registry.py  worker.py
backend/taskbridge-fastapi/tests/: README.md  test_deterministic_executor.py  test_fastapi_contract.py  test_handlers.py  test_http_api.py  test_integration_flow.py  test_interfaces.py  test_models.py  test_observability.py  test_protocol_contracts.py  test_readiness.py  test_reconciliation.py  test_redis_event_store.py  test_retention.py  test_services.py  test_sse_api.py  test_stream_runtime.py  test_task_actions.py  test_ws_api.py
docs/: executor-integration.md  getting-started.md  index.md  llms.txt  observability-ops.md  security-integration.md
docs/adapters/: index.md  temporal.md
docs/adr/: 0001-backend-stack.md  0002-android-networking.md  0003-streaming-protocol.md  0004-backend-library-shape.md  0005-android-toolchain-build-quality.md  0006-backend-transport-runtime-boundary.md  index.md
docs/android/: client-config.md  events-and-recovery.md  index.md  production-setup.md  storage-and-policies.md  transport-and-extension-points.md
docs/architecture/: index.md
docs/backend/: advanced-routing.md  host-integration.md  index.md  security-readiness-observability.md  services-and-routes.md  state-and-runtime-boundaries.md
docs/contributing/: index.md  publication.md
docs/documentation/: index.md
docs/examples/: index.md
docs/protocol/: index.md
docs/reference/: adapters.md  android.md  backend.md
examples/: README.md
examples/01-minimal-greeter/: README.md  app.py
examples/android-integration/: README.md  backend.env.example
examples/docker/: .gitignore  docker-compose.yml
examples/fastapi-host/: Dockerfile.example  README.md  docker-compose.yml  pyproject.toml
examples/fastapi-host/app/: __init__.py  demo_adapters.py  enterprise_stores.py  firebase_adapters.py  main.py  task_handlers.py  temporal_resume_service.py  temporal_streaming_executor.py  temporal_worker.py  temporal_workflows.py  wiring.py
examples/fastapi-host/tests/: test_smoke.py
protocol/: README.md  validate_protocol.py
protocol/examples/: poll_events_response.json  task_action_accepted.json  task_cancelled.json  task_completed.json  task_failed.json  task_message.json  task_progress.json  task_started.json  task_suspended.json  websocket_heartbeat.json  websocket_subscribe_ack.json  websocket_subscribe_request.json
protocol/openapi/: taskbridge.openapi.yaml
protocol/schemas/: task_client_action.schema.json  task_client_action_response.schema.json  task_event.schema.json
scripts/: docs_prepare.py  release_tools.py
tests/: test_docs_prepare.py  test_readme_version_update.py  test_release_metadata.py  test_release_tools_features.py  test_repository_publication.py
(+48 files in other folders)
