[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taskbridge-fastapi"
version = "0.1.0"
description = "Reliable AI Task Streaming Backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Nikolay Vlasov", email = "nikolayv_dev@outlook.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.9",
]

[project.urls]
Homepage = "https://github.com/nikkiw/task-bridge"
Repository = "https://github.com/nikkiw/task-bridge.git"
Documentation = "https://nikkiw.github.io/task-bridge/"

[tool.hatch.build.targets.wheel]
packages = ["taskbridge"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "jsonschema>=4.23.0",
    "pyyaml>=6.0.2",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "D"]
ignore = [
    "D100", # Missing docstring in public module (often noisy)
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__ (params usually in class docstring)
    "D203", # Incompatible with D211 (prefer no blank line before class)
    "D213", # Incompatible with D212 (prefer summary on first line)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"test_*.py" = ["D"]
