[project]
name = "taskbridge-fastapi-host-example"
version = "0.1.0"
description = "Minimal FastAPI host embedding taskbridge-fastapi (local demo)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "taskbridge-fastapi",
    "taskbridge-temporal-adapter",
    "uvicorn[standard]>=0.27.0",
    "firebase-admin>=6.5.0",
]

[tool.uv.sources]
taskbridge-fastapi = { path = "../../backend/taskbridge-fastapi", editable = true }
taskbridge-temporal-adapter = { path = "../../backend/adapters/temporal", editable = true }

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
