[project]
name = "taskbridge-temporal-adapter"
version = "0.1.0"
description = "Temporal adapter for taskbridge-fastapi TaskExecutor contract"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "taskbridge-fastapi",
    "temporalio>=1.8.0",
]

[tool.uv.sources]
taskbridge-fastapi = { path = "../../taskbridge-fastapi", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
